<resources>
    <string name="app_name">Bingo</string>
    <string name="space"> </string>
    <string name="favorite">Favourite</string>
    <string name="SortByName">By Name</string>
    <string name="defaultSort">All Song</string>
    <string name="defaultTime">00:00</string>
    <string name="loading">Just a sec..</string>
    <string name="main_activity">MainActivity</string>
    <string name="favorite_song">FavoriteSong</string>
    <string name="sort">Sort</string>
    <string name="more">More</string>
    <string name="back">Back</string>
    <string name="sortByDate">By Date</string>
    <string name="noSongs">[ No Songs in Favourite ]</string>
    <string name="noSongs2">[ No Songs ]</string>
    <string name="songDetails">Details</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="lastModified">Last Modified</string>
</resources>