<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_dialog2"
        android:padding="15dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tagNameOfSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/songNameForDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_below="@+id/tagNameOfSong"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tagSizeOfSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_below="@+id/songNameForDialog"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/sizeOfTheSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tagSizeOfSong"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tagLastModifiedOfSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastModified"
            android:layout_below="@+id/sizeOfTheSong"
            android:layout_alignParentStart="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/lastModifiedOfSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tagLastModifiedOfSong"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>